--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -59,7 +59,7 @@
         </section>
     
                 <div class="slds-box slds-theme--inverse">
-             <center> <h2>FAVOR DE INGRESAR SUS DATOS</h2></center>
+             <center> <h2> INGRESAR DATOS</h2></center>
                 </div>
                 <div class="formulario">
                   
