--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -89,7 +89,7 @@
                 <br>
                 <br>
                 <center>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Oxxo_Logo.svg/1200px-Oxxo_Logo.svg.png" height="300" width="300">
+                <img  height="300" width="300">
                 <h5>Al dar click en el botón 'DONAR', se generará una ficha de pago para que realice su donación en su OXXO más cercano.</h5>
                 </center>
                 <br>
