--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -95,7 +95,7 @@
                             <br>
                             <br>
                                 <center>
-                                <button class="slds-button slds-button--neutral" onclick={insertarContacto}>
+                                <button class="slds-button slds-button--neutral" onclick={dobleInsercion}>
                                     <p>DONAR</p>
                                 </button>
                                 </center>
